--- a/README.textile
+++ b/README.textile
@@ -9,7 +9,11 @@ To use it :
 # Edit your memori and delicious logins and password in settings.yml file
 # Run "rake run"
 # Smile!
-  
+
+h2. Notes
+
+It might now work on Windows without cygwin, don't even try.
+
 License
 -------
 
